# tucano

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  package.json  rustfmt.toml  tucano
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/ctl/: mod.rs
cli/src/worker/: mod.rs
crates/setup/: Cargo.toml
crates/setup/src/: lib.rs
ctl/: Cargo.toml
ctl/src/: args.rs  balancer.rs  main.rs  sender.rs  worker_mgr.rs
ctl/src/balancer/: mod.rs
ctl/src/deployer/: alloc.rs  instance.rs  mod.rs
ctl/src/discovery/: mod.rs
ctl/src/http/: deployer.rs  mod.rs  worker.rs  worker_mgr.rs
ctl/src/http/deployer/: mod.rs
ctl/src/http/worker/: mod.rs
ctl/src/worker_mgr/: mod.rs
dockerfiles/: node.dockerfile
docs/: DESIGN.md  state.md  statem.md
docs/rfcs/: 001-deploy-request.md
proto/: Cargo.toml  all.proto
proto/src/: lib.rs  well_known.rs
proto/src/clients/: ctl.rs  mod.rs  worker.rs
proto/src/common/: instance.rs  mod.rs  node.rs  service.rs
proto/src/ctl/: agent.rs  config.rs  deploy.rs  deployer.rs  inspector.rs  mod.rs  worker.rs
proto/src/etc/: error.rs  mod.rs
proto/src/worker/: mod.rs  runner.rs
tests/containers/: index.mjs
tests/containers/html/: Dockerfile  main.go
tests/containers/html/tpl/: index.html
tests/containers/number-fact/: Dockerfile  main.go
tests/containers/number-fact-go/: main.go
tests/containers/trivial-js/: Dockerfile
tests/perf-analysis/: README.md  test.js
tests/perf-analysis/results/: README.md  single-node.txt  tuc-multi-node-4x.txt  tuc-multi-node.txt
tests/perf-analysis/single-node/: docker-compose.yml
tests/perf-analysis/tuc-multi-node/: docker-compose.yml
tests/perf-analysis/tuc-multi-node-4x/: docker-compose.yml
utils/: Cargo.toml
utils/src/: fmt.rs  http.rs  lib.rs  server.rs
worker/: Cargo.toml
worker/src/: args.rs  main.rs  metrics.rs  monitor.rs  proxy.rs
worker/src/http/: mod.rs  runner.rs
worker/src/http/runner/: mod.rs
worker/src/monitor/: collector.rs  metrics_collector.rs  metrics_sender.rs  mod.rs  pusher.rs
worker/src/proxy/: mod.rs
worker/src/runner/: container_rt.rs  handle.rs  mod.rs
worker/src/sender/: mod.rs
