[workspace]
members = ["ctl", "proto", "worker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal deps
ctl.path = "ctl"
proto.path = "proto"
worker.path = "worker"
# External deps (keep alphabetically sorted)
axum = "0.7.4"
bty = { version = "0.1.0-pre.1", features = ["uuid"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
] }
eyre = "0.6.12"
reqwest = { version = "0.12.1" , features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.7"
tokio = "1.36.0"
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
wildcard_imports = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
