[workspace]
members = ["cli", "crates/*", "ctl", "proto", "worker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal deps
ctl.path = "ctl"
proto.path = "proto"
setup.path = "crates/setup"
worker.path = "worker"
# External deps (keep alphabetically sorted)
axum = "0.7"
bollard = "0.16.1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "serde",
] }
eyre = "0.6"
futures-util = "0.3.30"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1.36", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v7"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
wildcard_imports = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
unused_async = "allow"
