[workspace]
members = ["cli", "ctl", "proto", "worker", "utils"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal deps
ctl.path = "ctl"
proto.path = "proto"
utils.path = "utils"
worker.path = "worker"
# External deps (keep alphabetically sorted)
axum = { version = "0.7", features = ["macros"] }
bollard = "0.16.1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "now",
    "serde",
] }
eyre = "0.6"
futures-util = "0.3.30"
hyper-util = "0.1.5"
tabled = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1.36", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v7"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
wildcard_imports = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
unused_async = "allow"
enum_glob_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
