[package]
name = "ctl"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
proto.workspace = true
utils.workspace = true

axum.workspace = true
chrono.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
