[package]
name = "ctl"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
proto.workspace = true
utils.workspace = true

axum.workspace = true
chrono.workspace = true
clap.workspace = true
eyre.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
