[package]
name = "worker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
setup.workspace = true
proto.workspace = true

clap.workspace = true
eyre.workspace = true
get-port.workspace = true
reqwest.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
