[package]
name = "worker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Internal deps
proto.workspace = true
utils.workspace = true
# External deps (keep alphabetically sorted)
axum.workspace = true
bollard.workspace = true
chrono.workspace = true
clap.workspace = true
eyre.workspace = true
futures-util.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
